# openapi.yaml
@@ -159,6 +159,27 @@ paths:
           schema:
             $ref: "#/definitions/MessageResponse"
 
+  /auth/whoami:
+    get:
+      tags:
+        - auth
+      summary: Get current user
+      description: Get information about the currently authenticated user
+      operationId: whoami
+      produces:
+        - application/json
+      security:
+        - JWT: []
+      responses:
+        "200":
+          description: Current user information
+          schema:
+            $ref: "#/definitions/User"
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+
   /users:
     get:
       tags:
